objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ACV Capital Referral</fullName>
        <description>Used for referrals into the ACV Capital program</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Sent</fullName>
        </values>
        <values>
            <fullName>Awaiting Documents</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Legal Documentation</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Referred</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
        <values>
            <fullName>Underwriting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ACV Sales Process</fullName>
        <description>Sales Process used by ACV</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Account Manager</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Evaluating</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Activation team</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Deal Maker</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FastPass</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Additional Documents</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Documents Received</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Processing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Territory Managers</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Evaluating</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>True360</fullName>
        <description>Used to create True360 opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Onboarding</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Recurring Appointment</fullName>
        </values>
        <values>
            <fullName>Sales Pitch</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>A_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field for True360 Opportunity</description>
        <label>A-Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>A_Team_member_Calendly_link__c</fullName>
        <formula>A_Team_Member__r.Calendly_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A-Team member Calendly link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>IST Rep from Account</description>
        <formula>Account.IST_Account_Owner__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Displayed__c</fullName>
        <description>CAP - 644:   Welcome Email Project.

Used to display the account name to be used in welcome email templates for the client.</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Displayed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Rolling_30_Day_Sales_Volume__c</fullName>
        <formula>TEXT( Account.Actual_Rolling_30_Day_Sales_Volume__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Rolling 30 Day Sales Volume from Account</inlineHelpText>
        <label>Actual Rolling 30 Day Sales Volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Owner_Information__c</fullName>
        <description>Info on owners - one owner per line</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Follow this layout: Owner Name, Fico Score, Revolving credit, Min Score, Open Credit Balance</inlineHelpText>
        <label>Additional Owner Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ally_Customer__c</fullName>
        <description>Identifies an Ally customer that is on TA Hold.</description>
        <label>Ally Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who is entering the critical deal metrics</description>
        <inlineHelpText>User who is entering the critical deal metrics</inlineHelpText>
        <label>Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anticipated_Yearly_Volume__c</fullName>
        <description>Part of a group of fields used to calculate the Fleet/Lease Amount on opps.
Base Seller Fee
VCI Fee
Pack Fee
Go Green Fee
Anticipated Yearly Volume</description>
        <label>Anticipated Yearly Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auction_End_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Auction End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auction_ID__c</fullName>
        <description>Provides a unique Auction Id to be associated with Deal Maker opportunities. Used to give inbound integration a way to identify unique Opportunities.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Auction ID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Auction_Notes_2__c</fullName>
        <description>Bigger Auction Notes Field for Deal Maker</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Auction Notes 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auction_Notes__c</fullName>
        <description>Auction Notes for Dealmaker Open Opportunities with an Auction Status = counter_sent.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For a new line in the List View use &lt;Shift&gt; + &lt;Return&gt;.</inlineHelpText>
        <label>Auction Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_sell__c</fullName>
        <formula>Auction__r.auto_sell__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto-sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Sell_Volume__c</fullName>
        <formula>Account.Available_Sell_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Available Sell Volume from Account which is the unit Goal for this Opportunity</inlineHelpText>
        <label>Available Sell Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Sales__c</fullName>
        <description>CSO-215:  SFDC Lead Gen: Lead to Oppty Mapping</description>
        <label>Average Monthly Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Turn_Time_in_Days__c</fullName>
        <label>Average Turn Time in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Units_on_lot__c</fullName>
        <label>Average Units on lot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Wholesale_Vehicle_Price__c</fullName>
        <description>CSO-215:  SFDC Lead Gen: Lead to Oppty Mapping</description>
        <label>Average Wholesale Vehicle Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Comments__c</fullName>
        <description>SUed as open text for bankruptcy notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bankruptcy Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Base_Seller_Fee__c</fullName>
        <description>Part of a group of Fields:
Base Seller Fee
VCI Fee
Pack Fee
Go Green Fee
Anticipated Yearly Volume

To calculate the Amount field on Fleet/Lease Opportunities</description>
        <label>Base Seller Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bidder__c</fullName>
        <description>Buyer Primary Contact was not always the Bidder.  Bidder field created to replace this field on List Views.</description>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Auction__r.Buyer_Contact__c, Auction__r.Buyer_Contact__r.FirstName + &quot; &quot; + Auction__r.Buyer_Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bidder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Billing Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Intelliscore_Plus_Rating__c</fullName>
        <description>Rating from 1-100 will be used in auto populating the Intelliscore Plus Risk Class</description>
        <inlineHelpText>50K  - Min # Required = 25
75k - Min # required =  50
100k - Min # Required = 50</inlineHelpText>
        <label>Business Intelliscore Plus Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buyer_CAM_Team__c</fullName>
        <formula>text(Account.CAM_Team__c)</formula>
        <label>Buyer CAM Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Dealership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DealMaker Opportunities (Buyer)</relationshipLabel>
        <relationshipName>DealMaker_Opportunities_Buyer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_IST__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buyer Inside Sales Team</description>
        <label>Buyer IST</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealmaker Opportunities (Buyer)</relationshipLabel>
        <relationshipName>DealMaker_Opportunities_Buyer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Transportation_Cost__c</fullName>
        <description>Customers transportation cost pulling from the auction lfield &quot;Transportation cost to customer&quot;</description>
        <formula>Auction__r.Transportation_Price_to_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount billed to buyer for transportation</inlineHelpText>
        <label>Buyer Transportation Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Message__c</fullName>
        <description>CSO-215:  SFDC Lead Gen: Lead to Oppty Mapping</description>
        <label>Campaign Message</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkout Campaign</fullName>
                </value>
                <value>
                    <fullName>Digital-Floorplan-Spring Savings 60for60 Tax Season</fullName>
                </value>
                <value>
                    <fullName>Digital-Floorplan-2 Waived Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capital_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to reference the Floorplan Account Rep.</description>
        <label>Capital Account Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capital_Credit_Decisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for CSO - 660.  Needed to deploy apex trigger that will call the Experian API.</description>
        <label>Capital Credit Decisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_Dealer_Flag__c</fullName>
        <formula>IF( ISPICKVAL( Account.Capital_Dealer_Type__c , &quot;Capital Orange Elite&quot;),
IMAGE(&quot;https://acvauctions--uat--c.documentforce.com/servlet/servlet.ImageServer?id=01501000000HfAq&amp;oid=00D010000004b0z&amp;lastMod=1633012136000&quot;, &quot;Orange&quot;, 30, 30),NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag to show if this is an Opportunity for an Orange Elite Dealer</inlineHelpText>
        <label>Capital Dealer Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Product_Interest__c</fullName>
        <description>CSO-215:  SFDC Lead Gen: Lead to Oppty Mapping</description>
        <label>Capital Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACV_Accelerate</fullName>
                    <label>ACV Accelerate</label>
                </value>
                <value>
                    <fullName>ACV_Advantage</fullName>
                    <label>ACV Advantage</label>
                </value>
                <value>
                    <fullName>Floorplan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Meeting_Scheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Meeting Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClosedLostReason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Lost Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <description>also used in Capital Approval Process (Alisa VondeVeld 8/30/21)</description>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Credit Worthy</fullName>
                </value>
                <value>
                    <fullName>Not Ready</fullName>
                </value>
                <value>
                    <fullName>New Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Competition - Digital</fullName>
                </value>
                <value>
                    <fullName>Competition - Physical</fullName>
                </value>
                <value>
                    <fullName>Competition - Local bid sale</fullName>
                </value>
                <value>
                    <fullName>Lot constraints</fullName>
                </value>
                <value>
                    <fullName>Cannot access Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                    <isActive>false</isActive>
                    <label>Competition</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>Credit Limit available through ACV Capital</description>
        <inlineHelpText>Credit Limit available through ACV Capital</inlineHelpText>
        <label>Credit Limit</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Product__c</fullName>
        <label>Credit Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accelerate</fullName>
                    <label>ACV Accelerate</label>
                </value>
                <value>
                    <fullName>Floorplan</fullName>
                </value>
                <value>
                    <fullName>Advantage</fullName>
                    <label>ACV Advantage</label>
                </value>
                <value>
                    <fullName>Advantage + Accelerate</fullName>
                </value>
                <value>
                    <fullName>Floorplan + Accelerate</fullName>
                </value>
                <value>
                    <fullName>Floorplan 60+30</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_Deal_metrics_Summary__c</fullName>
        <description>Used to share summary of the deal metrics.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Critical Deal Metrics Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Floorplan_Provider__c</fullName>
        <description>CSO-215:  SFDC Lead Gen: Lead to Oppty Mapping</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Floorplan Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Request_Detail__c</fullName>
        <description>Detail on the current request type</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Detail on the current request type</inlineHelpText>
        <label>Current Request Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Request__c</fullName>
        <description>Type of request from the Applicant</description>
        <inlineHelpText>What type of request is being made?</inlineHelpText>
        <label>Current Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Review</fullName>
                </value>
                <value>
                    <fullName>New Money</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <description>DBA for ACV Capital.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Joined__c</fullName>
        <description>Date joined from account page</description>
        <formula>Account.Date_Joined__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Joined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_since_last_activity__c</fullName>
        <formula>Today()- IF(ISNULL(LastActivityDate), DATEVALUE(CreatedDate), LastActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealerType__c</fullName>
        <formula>TEXT(Account.Dealer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <description>Dealer ID field from account</description>
        <formula>Account.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_Eligible__c</fullName>
        <description>This is a yes or no picklist field manually selected.</description>
        <inlineHelpText>Please select one.</inlineHelpText>
        <label>Debt Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <description>Link to the google doc storing the documentation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__Bin_formula__c</fullName>
        <formula>if(Account.EXPRN__Exp_Business__r.EXPRN__BIN__c != null &amp;&amp; Account.EXPRN__Exp_Business__r.EXPRN__BIN__c != &apos;&apos;, Account.EXPRN__Exp_Business__r.EXPRN__BIN__c, Account.EXPRN__Exp_Business__r.EXPRN__Global_BIN__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Most_Recent_Decision_Opp__c</fullName>
        <formula>IF(EXPRN__Most_Recent_Decision_Status_Opp__c == &quot;Approve&quot; , EXPRN__Most_Recent_Decision_Status_Opp__c + &quot; &quot; + IMAGE(&quot;/resource/EXPRN__Approve&quot;, &quot;Approve&quot;), 

IF(EXPRN__Most_Recent_Decision_Status_Opp__c == &quot;Decline&quot;,EXPRN__Most_Recent_Decision_Status_Opp__c + &quot; &quot; + IMAGE(&quot;/resource/EXPRN__CreditDecisionDecline&quot;, &quot;Decline&quot;), 

IF(EXPRN__Most_Recent_Decision_Status_Opp__c == &quot;Manual Review&quot;,EXPRN__Most_Recent_Decision_Status_Opp__c + &quot; &quot; + IMAGE(&quot;/resource/EXPRN__CreditDecisionManualReview&quot;, &quot;Manual Review&quot;), &quot; &quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Most_Recent_Decision_Status_Opp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Most Recent Decision Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__owner1Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Guarantor 1 Lookup</label>
        <referenceTo>EXPRN__Owner_Guarantor_Lead_and_Opp__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__owner2Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Guarantor 2 Lookup</label>
        <referenceTo>EXPRN__Owner_Guarantor_Lead_and_Opp__c</referenceTo>
        <relationshipLabel>Opportunities (Owner Guarantor 2 Lookup)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Monthly_Volume__c</fullName>
        <description>Field for True360 Opportunity</description>
        <label>Expected Monthly Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FastPass_Document_Notes__c</fullName>
        <description>Sued to allow ACV Capital team to enter notes about documents received that may not meet requirements.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes regarding FastPass documentation</inlineHelpText>
        <label>FastPass Document Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Doc_Preparer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field doc preparer should be a Look Up field on the opportunity and only available for the ACV Capital referral record type - this would be used so that whoever is preparing documents for the opportunity can be placed in that field - it should only be able to be edited by ACV Capital users.</description>
        <label>Field Doc Preparer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity02</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_for_Account_Related_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field for Account Related List</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Create Opportunity</relationshipLabel>
        <relationshipName>Opportunities_RL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Stability_Risk_Class__c</fullName>
        <description>Financial Stability Risk Class</description>
        <inlineHelpText>50K - Max # Required = 3
75K - Max # Required = 3
100K - Max # Required = 2</inlineHelpText>
        <label>Financial Stability Risk Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Stability_Risk__c</fullName>
        <description>The Financial Stability Risk number</description>
        <inlineHelpText>50k - Min # Required = 10
75k - Min # Required = 10
100k - Min # Required = 30</inlineHelpText>
        <label>Financial Stability Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Price__c</fullName>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Value__c</fullName>
        <formula>Auction__r.floor_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google Click Identifier, is a unique tracking parameter that Google uses to transfer information between your Google Ads account and your Google Analytics account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Green_Fee__c</fullName>
        <description>Part of a group of fields used to calculate the Amount field on Fleet/Lease Opps.
Base Seller Fee
VCI Fee
Pack Fee
Go Green Fee
Anticipated Yearly Volume</description>
        <label>Go Green Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Count__c</fullName>
        <description>Auto computed field that is used in reports for aggregations.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto computed field that is used in reports for aggregations.</inlineHelpText>
        <label>Gong Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>